patch: fix t1 mismatched data type

--- a/_patch0/orbis/TheLastOfUs1-Orbis.yml
+++ b/_patch0/orbis/TheLastOfUs1-Orbis.yml
@@ -185,7 +185,7 @@
   author: "illusion"
   arch: orbis
   patch_list:
-        - [ bytes, 0x004021a4, 0x75 ]
+        - [ byte, 0x004021a4, 0x75 ]
 
 - game: "The Last of Us: Remastered"
   app_ver: "01.11"
@@ -216,66 +216,73 @@
         - [ bytes, 0x00919399, "e81fcab5ff" ]   # CALL 0x00475dbd
         - [ bytes, 0x009192c9, "e8e2cab5ff" ]   # CALL 0x00475db0
         # str lookup
-        - [ bytes, 0x01853570, "shiv                           " ]
-        - [ bytes, 0x01853590, "pistol-uber-t1                 " ]
-        - [ bytes, 0x018535b0, "baseball-bat                   " ]
-        - [ bytes, 0x018535d0, "hatchet                        " ]
-        - [ bytes, 0x018535f0, "NO_ART_GROUP                   " ]
-        - [ bytes, 0x01853610, "nail-bomb                      " ]
-        - [ bytes, 0x01853630, "two-by-four                    " ]
-        - [ bytes, 0x01853650, "nail-bomb                      " ]
-        - [ bytes, 0x01853670, "turret-sniper                  " ]
-        - [ bytes, 0x01853690, "rifle-lever-action             " ]
-        - [ bytes, 0x018536b0, "pistol-uber-t1                 " ]
-        - [ bytes, 0x018536d0, "shiv                           " ]
-        - [ bytes, 0x018536f0, "radio                          " ]
-        - [ bytes, 0x01853710, "molotov                        " ]
-        - [ bytes, 0x01853730, "bandage-apply                  " ]
-        - [ bytes, 0x01853750, "mp-parcel                      " ]
-        - [ bytes, 0x01853770, "gren-launcher-improvised       " ]
-        - [ bytes, 0x01853790, "shotgun-dbl-barrel             " ]
-        - [ bytes, 0x018537b0, "machete-blade                  " ]
-        - [ bytes, 0x018537d0, "bow-dark                       " ]
-        - [ bytes, 0x018537f0, "rifle-variable                 " ]
-        - [ bytes, 0x01853810, "mini-14-rifle                  " ]
-        - [ bytes, 0x01853830, "two-by-four                    " ]
-        - [ bytes, 0x01853850, "pistol-shotgun                 " ]
-        - [ bytes, 0x01853870, "rifle-improvised-fullauto      " ]
-        - [ bytes, 0x01853890, "super-soaker                   " ]
-        - [ bytes, 0x018538b0, "NO_ART_GROUP                   " ]
-        - [ bytes, 0x018538d0, "beer-bottle                    " ]
-        - [ bytes, 0x018538f0, "crossbow-dlc                   " ]
-        - [ bytes, 0x01853910, "lead-pipe                      " ]
-        - [ bytes, 0x01853930, "lead-pipe                      " ]
-        - [ bytes, 0x01853950, "flamethrower                   " ]
-        - [ bytes, 0x01853970, "desert-eagle-t1                " ]
-        - [ bytes, 0x01853990, "flashlight                     " ]
-        - [ bytes, 0x018539b0, "rifle-sniper                   " ]
-        - [ bytes, 0x018539d0, "m4-rifle-t1                    " ]
-        - [ bytes, 0x018539f0, "smoke-bomb                     " ]
-        - [ bytes, 0x01853a10, "throw-brick                    " ]
-        - [ bytes, 0x01853a30, "shotgun-pump-stock             " ]
-        - [ bytes, 0x01853a50, "silenced-galil-rifle           " ]
-        - [ bytes, 0x01853a70, "NO_ART_GROUP                   " ]
-        - [ bytes, 0x01853a90, "bloater-pustule                " ]
-        - [ bytes, 0x01853ab0, "taurus-66b4-revolver           " ]
-        - [ bytes, 0x01853ad0, "nail-bomb                      " ]
-        - [ bytes, 0x01853af0, "rifle-improvised-assault       " ]
-        - [ bytes, 0x01853b10, "throwing-knife                 " ]
-        - [ bytes, 0x01853b30, "rifle-bolt                     " ]
-        - [ bytes, 0x01853b50, "beretta-jaguar-pistol          " ]
-        - [ bytes, 0x01853b70, "bow                            " ]
-        - [ bytes, 0x01853b90, "molotov                        " ]
-        - [ bytes, 0x01853bb0, "bill-knife                     " ]
-        - [ bytes, 0x01853bd0, "baseball-bat                   " ]
-        - [ bytes, 0x01853bf0, "mini-14-rifle                  " ]
-        - [ bytes, 0x01853c10, "pistol-glock-burst             " ]
-        - [ bytes, 0x01853c30, "pistol-9mm                     " ]
-        - [ bytes, 0x01853c50, "shotgun-tactical               " ]
-        - [ bytes, 0x01853c70, "mal-gas-can                    " ]
-        - [ bytes, 0x01853c90, "machete-blade                  " ]
-        - [ bytes, 0x01853cb0, "none                           " ]
-        - [ bytes, 0x01853cd0, "rifle-improvised-assault       " ]
-        - [ bytes, 0x01853cf0, "binoculars                     " ]
-        - [ bytes, 0x01853d10, "switchblade                    " ]
-        - [ bytes, 0x01853d30, "rifle-improvised-fullauto      " ]
+        - [ utf8, 0x01853570, "shiv                           " ]
+        - [ utf8, 0x01853570, "shiv                           " ]
+        - [ utf8, 0x01853570, "shiv                           " ]
+        - [ utf8, 0x01853570, "shiv                           " ]
+        - [ utf8, 0x01853570, "shiv                           " ]
+        - [ utf8, 0x01853570, "shiv                           " ]
+        - [ utf8, 0x01853570, "shiv                           " ]
+        - [ utf8, 0x01853570, "shiv                           " ]
+        - [ utf8, 0x01853590, "pistol-uber-t1                 " ]
+        - [ utf8, 0x018535b0, "baseball-bat                   " ]
+        - [ utf8, 0x018535d0, "hatchet                        " ]
+        - [ utf8, 0x018535f0, "NO_ART_GROUP                   " ]
+        - [ utf8, 0x01853610, "nail-bomb                      " ]
+        - [ utf8, 0x01853630, "two-by-four                    " ]
+        - [ utf8, 0x01853650, "nail-bomb                      " ]
+        - [ utf8, 0x01853670, "turret-sniper                  " ]
+        - [ utf8, 0x01853690, "rifle-lever-action             " ]
+        - [ utf8, 0x018536b0, "pistol-uber-t1                 " ]
+        - [ utf8, 0x018536d0, "shiv                           " ]
+        - [ utf8, 0x018536f0, "radio                          " ]
+        - [ utf8, 0x01853710, "molotov                        " ]
+        - [ utf8, 0x01853730, "bandage-apply                  " ]
+        - [ utf8, 0x01853750, "mp-parcel                      " ]
+        - [ utf8, 0x01853770, "gren-launcher-improvised       " ]
+        - [ utf8, 0x01853790, "shotgun-dbl-barrel             " ]
+        - [ utf8, 0x018537b0, "machete-blade                  " ]
+        - [ utf8, 0x018537d0, "bow-dark                       " ]
+        - [ utf8, 0x018537f0, "rifle-variable                 " ]
+        - [ utf8, 0x01853810, "mini-14-rifle                  " ]
+        - [ utf8, 0x01853830, "two-by-four                    " ]
+        - [ utf8, 0x01853850, "pistol-shotgun                 " ]
+        - [ utf8, 0x01853870, "rifle-improvised-fullauto      " ]
+        - [ utf8, 0x01853890, "super-soaker                   " ]
+        - [ utf8, 0x018538b0, "NO_ART_GROUP                   " ]
+        - [ utf8, 0x018538d0, "beer-bottle                    " ]
+        - [ utf8, 0x018538f0, "crossbow-dlc                   " ]
+        - [ utf8, 0x01853910, "lead-pipe                      " ]
+        - [ utf8, 0x01853930, "lead-pipe                      " ]
+        - [ utf8, 0x01853950, "flamethrower                   " ]
+        - [ utf8, 0x01853970, "desert-eagle-t1                " ]
+        - [ utf8, 0x01853990, "flashlight                     " ]
+        - [ utf8, 0x018539b0, "rifle-sniper                   " ]
+        - [ utf8, 0x018539d0, "m4-rifle-t1                    " ]
+        - [ utf8, 0x018539f0, "smoke-bomb                     " ]
+        - [ utf8, 0x01853a10, "throw-brick                    " ]
+        - [ utf8, 0x01853a30, "shotgun-pump-stock             " ]
+        - [ utf8, 0x01853a50, "silenced-galil-rifle           " ]
+        - [ utf8, 0x01853a70, "NO_ART_GROUP                   " ]
+        - [ utf8, 0x01853a90, "bloater-pustule                " ]
+        - [ utf8, 0x01853ab0, "taurus-66b4-revolver           " ]
+        - [ utf8, 0x01853ad0, "nail-bomb                      " ]
+        - [ utf8, 0x01853af0, "rifle-improvised-assault       " ]
+        - [ utf8, 0x01853b10, "throwing-knife                 " ]
+        - [ utf8, 0x01853b30, "rifle-bolt                     " ]
+        - [ utf8, 0x01853b50, "beretta-jaguar-pistol          " ]
+        - [ utf8, 0x01853b70, "bow                            " ]
+        - [ utf8, 0x01853b90, "molotov                        " ]
+        - [ utf8, 0x01853bb0, "bill-knife                     " ]
+        - [ utf8, 0x01853bd0, "baseball-bat                   " ]
+        - [ utf8, 0x01853bf0, "mini-14-rifle                  " ]
+        - [ utf8, 0x01853c10, "pistol-glock-burst             " ]
+        - [ utf8, 0x01853c30, "pistol-9mm                     " ]
+        - [ utf8, 0x01853c50, "shotgun-tactical               " ]
+        - [ utf8, 0x01853c70, "mal-gas-can                    " ]
+        - [ utf8, 0x01853c90, "machete-blade                  " ]
+        - [ utf8, 0x01853cb0, "none                           " ]
+        - [ utf8, 0x01853cd0, "rifle-improvised-assault       " ]
+        - [ utf8, 0x01853cf0, "binoculars                     " ]
+        - [ utf8, 0x01853d10, "switchblade                    " ]
+        - [ utf8, 0x01853d30, "rifle-improvised-fullauto      " ]
