--- a/_patch0/orbis/GravityDaze2-Orbis.yml
+++ b/_patch0/orbis/GravityDaze2-Orbis.yml
@@ -85,6 +85,8 @@
         - [ bytes, 0x01802d65, "48890d08533000" ]   # MOV qword ptr [0x01b08074],RCX
         - [ bytes, 0x01802d6c, "c3" ]               # RET
         - [ bytes, 0x01802f75, "488d0d4f000000" ]   # LEA RCX,[0x1802fcb]
+        # filter
+        # only save "ep", "sm", "mine", "ft" # free roam # ,"dm" # crow #, "cm" ?
         - [ bytes, 0x01802f7c, "6641813c24736d" ]   # CMP word ptr [R12],0x6d73
         - [ bytes, 0x01802f83, "7446" ]             # JZ 0x01802fcb
         - [ bytes, 0x01802f85, "6641817c24006674" ] # CMP word ptr [R12 + 0x0],0x7466
@@ -95,7 +97,9 @@
         - [ bytes, 0x01802fa1, "7428" ]             # JZ 0x01802fcb
         - [ bytes, 0x01802fa3, "6641817c2400646d" ] # CMP word ptr [R12 + 0x0],0x6d64
         - [ bytes, 0x01802fab, "741e" ]             # JZ 0x01802fcb
-        - [ bytes, 0x01802fad, "eb14" ]             # JMP 0x01802fc3
+        - [ bytes, 0x01802fad, "6641817c2400636d" ] # CMP word ptr [R12 + 0x0],0x6d63
+        - [ bytes, 0x01802fb5, "7414" ]             # JZ 0x01802fcb
+        - [ bytes, 0x01802fb7, "eb0a" ]             # JMP 0x01802fc3
         - [ bytes, 0x01802fc3, "c3" ]               # RET
         - [ bytes, 0x01802fcb, "e984fdffff" ]       # JMP 0x01802d54
         # level check
@@ -104,7 +108,7 @@
         - [ bytes, 0x01802fec, "4889059d503000" ] # MOV qword ptr [0x01b08090],RAX
         - [ bytes, 0x01802ff3, "48891d9e503000" ] # MOV qword ptr [0x01b08098],RBX
         - [ bytes, 0x01802ffa, "48893d9f503000" ] # MOV qword ptr [0x01b080a0],RDI
-        - [ bytes, 0x01803001, "488915a0846f00" ] # MOV qword ptr [0x01efb4a8],RDX
+        - [ bytes, 0x01803001, "488915a0503000" ] # MOV qword ptr [0x01b080a8],RDX
         - [ bytes, 0x01803008, "eb2c" ]           # JMP 0x01803036
         - [ bytes, 0x01803036, "488d0533503000" ] # LEA RAX,[0x1b08070]
         - [ bytes, 0x0180303d, "488d1de1000000" ] # LEA RBX,[0x1803125]
